adding back button on second stepper

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -111,6 +111,7 @@
         </mat-form-field>
       </div>
       <div>
+        <button mat-button matStepperPrevious>Voltar</button>
         <button mat-button matStepperNext [disabled]="this.secondFormGroup.invalid">Next</button>
       </div>
     </div>
